// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionHeader renders 100% pie 1`] = `
<div
  className="box-row box-row--normal"
>
  <div
    className="child-wrapper"
    style={
      Object {
        "width": "50.00000%",
      }
    }
  >
    <div
      className="investment-allocation"
    >
      <div
        className="report-section"
      >
        <div
          className="section-header"
        >
          <p
            className="section-header__title"
          >
            acquisition INVESTMENT ALLOCATIONS
          </p>
        </div>
        <div
          className="investment-allocation__body"
        >
          <div
            className="investment-allocation__chart"
          >
            <div
              className="VictoryContainer"
              style={
                Object {
                  "height": "100%",
                  "pointerEvents": "none",
                  "position": "relative",
                  "touchAction": "none",
                  "width": "100%",
                }
              }
            >
              <svg
                aria-labelledby="victory-container-3-title victory-container-3-desc"
                height={400}
                role="img"
                style={
                  Object {
                    "height": "100%",
                    "pointerEvents": "all",
                    "width": "100%",
                  }
                }
                viewBox="0 0 400 400"
                width={400}
              >
                <g>
                  <path
                    d="M1.2246467991473532e-14,-200L0,0Z"
                    role="presentation"
                    shapeRendering="auto"
                    style={
                      Object {
                        "fill": undefined,
                        "padding": 10,
                        "stroke": "transparent",
                        "strokeWidth": 1,
                      }
                    }
                    transform="translate(200, 200)"
                  />
                  <path
                    d="M1.2246467991473532e-14,-200L0,0Z"
                    role="presentation"
                    shapeRendering="auto"
                    style={
                      Object {
                        "fill": undefined,
                        "padding": 10,
                        "stroke": "transparent",
                        "strokeWidth": 1,
                      }
                    }
                    transform="translate(200, 200)"
                  />
                  <path
                    d="M1.2246467991473532e-14,-200A200,200,0,1,1,-190.88100037590152,59.70296220033882L0,0Z"
                    role="presentation"
                    shapeRendering="auto"
                    style={
                      Object {
                        "fill": undefined,
                        "padding": 10,
                        "stroke": "transparent",
                        "strokeWidth": 1,
                      }
                    }
                    transform="translate(200, 200)"
                  />
                  <path
                    d="M-190.88100037590152,59.70296220033882A200,200,0,0,1,1.4089627996560445e-13,-200L0,0Z"
                    role="presentation"
                    shapeRendering="auto"
                    style={
                      Object {
                        "fill": undefined,
                        "padding": 10,
                        "stroke": "transparent",
                        "strokeWidth": 1,
                      }
                    }
                    transform="translate(200, 200)"
                  />
                  <text
                    direction="inherit"
                    dx={0}
                    dy={-2.0300000000000002}
                    x={200}
                    y={160}
                  >
                    <tspan
                      dx={0}
                      style={
                        Object {
                          "fill": "#252525",
                          "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Seravek', 'Trebuchet MS', sans-serif",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 20,
                          "stroke": "transparent",
                        }
                      }
                      textAnchor="middle"
                      x={200}
                    >
                      
                    </tspan>
                  </text>
                  <text
                    direction="inherit"
                    dx={0}
                    dy={-2.0300000000000002}
                    x={200}
                    y={160}
                  >
                    <tspan
                      dx={0}
                      style={
                        Object {
                          "fill": "#252525",
                          "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Seravek', 'Trebuchet MS', sans-serif",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 20,
                          "stroke": "transparent",
                        }
                      }
                      textAnchor="middle"
                      x={200}
                    >
                      
                    </tspan>
                  </text>
                  <text
                    direction="inherit"
                    dx={0}
                    dy={4.97}
                    x={232}
                    y={224}
                  >
                    <tspan
                      dx={0}
                      style={
                        Object {
                          "fill": "#252525",
                          "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Seravek', 'Trebuchet MS', sans-serif",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 20,
                          "stroke": "transparent",
                        }
                      }
                      textAnchor="start"
                      x={232}
                    >
                      70%
                    </tspan>
                  </text>
                  <text
                    direction="inherit"
                    dx={0}
                    dy={4.97}
                    x={168}
                    y={176}
                  >
                    <tspan
                      dx={0}
                      style={
                        Object {
                          "fill": "#252525",
                          "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Seravek', 'Trebuchet MS', sans-serif",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 20,
                          "stroke": "transparent",
                        }
                      }
                      textAnchor="end"
                      x={168}
                    >
                      30%
                    </tspan>
                  </text>
                </g>
              </svg>
              <div
                style={
                  Object {
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "top": 0,
                    "width": "100%",
                    "zIndex": 99,
                  }
                }
              >
                <svg
                  height={400}
                  style={
                    Object {
                      "height": "100%",
                      "overflow": "visible",
                      "width": "100%",
                    }
                  }
                  viewBox="0 0 400 400"
                  width={400}
                />
              </div>
            </div>
          </div>
          <div
            className="investment-allocation__expenses"
          >
            <div
              className="investment-allocation__row"
            >
              <div
                className="investment-allocation__title investment-allocation__title--reputation-building"
              >
                Reputation Building
              </div>
              <div
                className="investment-allocation__value"
              >
                $20k
              </div>
            </div>
            <div
              className="investment-allocation__row"
            >
              <div
                className="investment-allocation__title investment-allocation__title--demand-creation"
              >
                Demand Creation
              </div>
              <div
                className="investment-allocation__value"
              >
                $48k
              </div>
            </div>
            <div
              className="investment-allocation__row investment-allocation__row--empty"
            >
              <div
                className="investment-allocation__title investment-allocation__title--leasing-enablement"
              >
                Leasing Enablement
              </div>
              <div
                className="investment-allocation__value"
              >
                $0
              </div>
            </div>
            <div
              className="investment-allocation__row investment-allocation__row--empty"
            >
              <div
                className="investment-allocation__title investment-allocation__title--market-intelligence"
              >
                Market Intelligence
              </div>
              <div
                className="investment-allocation__value"
              >
                $0
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="child-wrapper"
    style={
      Object {
        "width": "50.00000%",
      }
    }
  >
    <div
      className="investment-allocation"
    >
      <div
        className="report-section"
      >
        <div
          className="section-header"
        >
          <p
            className="section-header__title"
          >
            retention INVESTMENT ALLOCATIONS
          </p>
        </div>
        <div
          className="investment-allocation__body"
        >
          <div
            className="investment-allocation__chart"
          >
            <div
              className="VictoryContainer"
              style={
                Object {
                  "height": "100%",
                  "pointerEvents": "none",
                  "position": "relative",
                  "touchAction": "none",
                  "width": "100%",
                }
              }
            >
              <svg
                aria-labelledby="victory-container-4-title victory-container-4-desc"
                height={400}
                role="img"
                style={
                  Object {
                    "height": "100%",
                    "pointerEvents": "all",
                    "width": "100%",
                  }
                }
                viewBox="0 0 400 400"
                width={400}
              >
                <g>
                  <path
                    d="M1.2246467991473532e-14,-200L0,0Z"
                    role="presentation"
                    shapeRendering="auto"
                    style={
                      Object {
                        "fill": undefined,
                        "padding": 10,
                        "stroke": "transparent",
                        "strokeWidth": 1,
                      }
                    }
                    transform="translate(200, 200)"
                  />
                  <path
                    d="M1.2246467991473532e-14,-200A200,200,0,1,1,-1.2246467991473532e-14,200A200,200,0,1,1,1.2246467991473532e-14,-200Z"
                    role="presentation"
                    shapeRendering="auto"
                    style={
                      Object {
                        "fill": undefined,
                        "padding": 10,
                        "stroke": "transparent",
                        "strokeWidth": 1,
                      }
                    }
                    transform="translate(200, 200)"
                  />
                  <path
                    d="M-2.1437508791444564e-13,-200L0,0Z"
                    role="presentation"
                    shapeRendering="auto"
                    style={
                      Object {
                        "fill": undefined,
                        "padding": 10,
                        "stroke": "transparent",
                        "strokeWidth": 1,
                      }
                    }
                    transform="translate(200, 200)"
                  />
                  <path
                    d="M-2.1437508791444564e-13,-200L0,0Z"
                    role="presentation"
                    shapeRendering="auto"
                    style={
                      Object {
                        "fill": undefined,
                        "padding": 10,
                        "stroke": "transparent",
                        "strokeWidth": 1,
                      }
                    }
                    transform="translate(200, 200)"
                  />
                  <text
                    direction="inherit"
                    dx={0}
                    dy={-2.0300000000000002}
                    x={200}
                    y={205}
                  >
                    <tspan
                      dx={0}
                      style={
                        Object {
                          "fill": "#252525",
                          "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Seravek', 'Trebuchet MS', sans-serif",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 20,
                          "stroke": "transparent",
                        }
                      }
                      textAnchor="middle"
                      x={200}
                    >
                      
                    </tspan>
                  </text>
                  <text
                    direction="inherit"
                    dx={0}
                    dy={11.969999999999999}
                    x={200}
                    y={195}
                  >
                    <tspan
                      dx={0}
                      style={
                        Object {
                          "fill": "#252525",
                          "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Seravek', 'Trebuchet MS', sans-serif",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 20,
                          "stroke": "transparent",
                        }
                      }
                      textAnchor="middle"
                      x={200}
                    >
                      100%
                    </tspan>
                  </text>
                  <text
                    direction="inherit"
                    dx={0}
                    dy={-2.0300000000000002}
                    x={200}
                    y={205}
                  >
                    <tspan
                      dx={0}
                      style={
                        Object {
                          "fill": "#252525",
                          "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Seravek', 'Trebuchet MS', sans-serif",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 20,
                          "stroke": "transparent",
                        }
                      }
                      textAnchor="middle"
                      x={200}
                    >
                      
                    </tspan>
                  </text>
                  <text
                    direction="inherit"
                    dx={0}
                    dy={-2.0300000000000002}
                    x={200}
                    y={205}
                  >
                    <tspan
                      dx={0}
                      style={
                        Object {
                          "fill": "#252525",
                          "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Seravek', 'Trebuchet MS', sans-serif",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 20,
                          "stroke": "transparent",
                        }
                      }
                      textAnchor="middle"
                      x={200}
                    >
                      
                    </tspan>
                  </text>
                </g>
              </svg>
              <div
                style={
                  Object {
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "top": 0,
                    "width": "100%",
                    "zIndex": 99,
                  }
                }
              >
                <svg
                  height={400}
                  style={
                    Object {
                      "height": "100%",
                      "overflow": "visible",
                      "width": "100%",
                    }
                  }
                  viewBox="0 0 400 400"
                  width={400}
                />
              </div>
            </div>
          </div>
          <div
            className="investment-allocation__expenses"
          >
            <div
              className="investment-allocation__row investment-allocation__row--empty"
            >
              <div
                className="investment-allocation__title investment-allocation__title--reputation-building"
              >
                Reputation Building
              </div>
              <div
                className="investment-allocation__value"
              >
                $0
              </div>
            </div>
            <div
              className="investment-allocation__row investment-allocation__row--empty"
            >
              <div
                className="investment-allocation__title investment-allocation__title--demand-creation"
              >
                Demand Creation
              </div>
              <div
                className="investment-allocation__value"
              >
                $0
              </div>
            </div>
            <div
              className="investment-allocation__row"
            >
              <div
                className="investment-allocation__title investment-allocation__title--leasing-enablement"
              >
                Leasing Enablement
              </div>
              <div
                className="investment-allocation__value"
              >
                $6k
              </div>
            </div>
            <div
              className="investment-allocation__row investment-allocation__row--empty"
            >
              <div
                className="investment-allocation__title investment-allocation__title--market-intelligence"
              >
                Market Intelligence
              </div>
              <div
                className="investment-allocation__value"
              >
                $0
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SectionHeader renders empty pie 1`] = `
<div
  className="box-row box-row--normal"
>
  <div
    className="child-wrapper"
    style={
      Object {
        "width": "50.00000%",
      }
    }
  >
    <div
      className="investment-allocation"
    >
      <div
        className="report-section"
      >
        <div
          className="section-header"
        >
          <p
            className="section-header__title"
          >
            acquisition INVESTMENT ALLOCATIONS
          </p>
        </div>
        <div
          className="investment-allocation__body"
        >
          <div
            className="investment-allocation__chart"
          >
            <div
              className="VictoryContainer"
              style={
                Object {
                  "height": "100%",
                  "pointerEvents": "none",
                  "position": "relative",
                  "touchAction": "none",
                  "width": "100%",
                }
              }
            >
              <svg
                aria-labelledby="victory-container-1-title victory-container-1-desc"
                height={400}
                role="img"
                style={
                  Object {
                    "height": "100%",
                    "pointerEvents": "all",
                    "width": "100%",
                  }
                }
                viewBox="0 0 400 400"
                width={400}
              >
                <g>
                  <path
                    d="M1.2246467991473532e-14,-200L0,0Z"
                    role="presentation"
                    shapeRendering="auto"
                    style={
                      Object {
                        "fill": undefined,
                        "padding": 10,
                        "stroke": "transparent",
                        "strokeWidth": 1,
                      }
                    }
                    transform="translate(200, 200)"
                  />
                  <path
                    d="M1.2246467991473532e-14,-200L0,0Z"
                    role="presentation"
                    shapeRendering="auto"
                    style={
                      Object {
                        "fill": undefined,
                        "padding": 10,
                        "stroke": "transparent",
                        "strokeWidth": 1,
                      }
                    }
                    transform="translate(200, 200)"
                  />
                  <path
                    d="M1.2246467991473532e-14,-200A200,200,0,1,1,-190.88100037590152,59.70296220033882L0,0Z"
                    role="presentation"
                    shapeRendering="auto"
                    style={
                      Object {
                        "fill": undefined,
                        "padding": 10,
                        "stroke": "transparent",
                        "strokeWidth": 1,
                      }
                    }
                    transform="translate(200, 200)"
                  />
                  <path
                    d="M-190.88100037590152,59.70296220033882A200,200,0,0,1,1.4089627996560445e-13,-200L0,0Z"
                    role="presentation"
                    shapeRendering="auto"
                    style={
                      Object {
                        "fill": undefined,
                        "padding": 10,
                        "stroke": "transparent",
                        "strokeWidth": 1,
                      }
                    }
                    transform="translate(200, 200)"
                  />
                  <text
                    direction="inherit"
                    dx={0}
                    dy={-2.0300000000000002}
                    x={200}
                    y={160}
                  >
                    <tspan
                      dx={0}
                      style={
                        Object {
                          "fill": "#252525",
                          "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Seravek', 'Trebuchet MS', sans-serif",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 20,
                          "stroke": "transparent",
                        }
                      }
                      textAnchor="middle"
                      x={200}
                    >
                      
                    </tspan>
                  </text>
                  <text
                    direction="inherit"
                    dx={0}
                    dy={-2.0300000000000002}
                    x={200}
                    y={160}
                  >
                    <tspan
                      dx={0}
                      style={
                        Object {
                          "fill": "#252525",
                          "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Seravek', 'Trebuchet MS', sans-serif",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 20,
                          "stroke": "transparent",
                        }
                      }
                      textAnchor="middle"
                      x={200}
                    >
                      
                    </tspan>
                  </text>
                  <text
                    direction="inherit"
                    dx={0}
                    dy={4.97}
                    x={232}
                    y={224}
                  >
                    <tspan
                      dx={0}
                      style={
                        Object {
                          "fill": "#252525",
                          "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Seravek', 'Trebuchet MS', sans-serif",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 20,
                          "stroke": "transparent",
                        }
                      }
                      textAnchor="start"
                      x={232}
                    >
                      70%
                    </tspan>
                  </text>
                  <text
                    direction="inherit"
                    dx={0}
                    dy={4.97}
                    x={168}
                    y={176}
                  >
                    <tspan
                      dx={0}
                      style={
                        Object {
                          "fill": "#252525",
                          "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Seravek', 'Trebuchet MS', sans-serif",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 20,
                          "stroke": "transparent",
                        }
                      }
                      textAnchor="end"
                      x={168}
                    >
                      30%
                    </tspan>
                  </text>
                </g>
              </svg>
              <div
                style={
                  Object {
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "top": 0,
                    "width": "100%",
                    "zIndex": 99,
                  }
                }
              >
                <svg
                  height={400}
                  style={
                    Object {
                      "height": "100%",
                      "overflow": "visible",
                      "width": "100%",
                    }
                  }
                  viewBox="0 0 400 400"
                  width={400}
                />
              </div>
            </div>
          </div>
          <div
            className="investment-allocation__expenses"
          >
            <div
              className="investment-allocation__row"
            >
              <div
                className="investment-allocation__title investment-allocation__title--reputation-building"
              >
                Reputation Building
              </div>
              <div
                className="investment-allocation__value"
              >
                $20k
              </div>
            </div>
            <div
              className="investment-allocation__row"
            >
              <div
                className="investment-allocation__title investment-allocation__title--demand-creation"
              >
                Demand Creation
              </div>
              <div
                className="investment-allocation__value"
              >
                $48k
              </div>
            </div>
            <div
              className="investment-allocation__row investment-allocation__row--empty"
            >
              <div
                className="investment-allocation__title investment-allocation__title--leasing-enablement"
              >
                Leasing Enablement
              </div>
              <div
                className="investment-allocation__value"
              >
                $0
              </div>
            </div>
            <div
              className="investment-allocation__row investment-allocation__row--empty"
            >
              <div
                className="investment-allocation__title investment-allocation__title--market-intelligence"
              >
                Market Intelligence
              </div>
              <div
                className="investment-allocation__value"
              >
                $0
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="child-wrapper"
    style={
      Object {
        "width": "50.00000%",
      }
    }
  >
    <div
      className="investment-allocation"
    >
      <div
        className="report-section"
      >
        <div
          className="section-header"
        >
          <p
            className="section-header__title"
          >
            retention INVESTMENT ALLOCATIONS
          </p>
        </div>
        <div
          className="investment-allocation__body"
        >
          <div
            className="investment-allocation__chart"
          >
            <div
              className="VictoryContainer"
              style={
                Object {
                  "border": "1px dashed",
                  "borderColor": undefined,
                  "borderRadius": "50%",
                  "height": "100%",
                  "pointerEvents": "none",
                  "position": "relative",
                  "touchAction": "none",
                  "width": "100%",
                }
              }
            >
              <svg
                aria-labelledby="victory-container-2-title victory-container-2-desc"
                height={400}
                role="img"
                style={
                  Object {
                    "height": "100%",
                    "pointerEvents": "all",
                    "width": "100%",
                  }
                }
                viewBox="0 0 400 400"
                width={400}
              >
                <g>
                  <path
                    d="M1.2246467991473532e-14,-200L0,0Z"
                    role="presentation"
                    shapeRendering="auto"
                    style={
                      Object {
                        "fill": undefined,
                        "padding": 10,
                        "stroke": "transparent",
                        "strokeWidth": 1,
                      }
                    }
                    transform="translate(200, 200)"
                  />
                  <path
                    d="M1.2246467991473532e-14,-200L0,0Z"
                    role="presentation"
                    shapeRendering="auto"
                    style={
                      Object {
                        "fill": undefined,
                        "padding": 10,
                        "stroke": "transparent",
                        "strokeWidth": 1,
                      }
                    }
                    transform="translate(200, 200)"
                  />
                  <path
                    d="M1.2246467991473532e-14,-200L0,0Z"
                    role="presentation"
                    shapeRendering="auto"
                    style={
                      Object {
                        "fill": undefined,
                        "padding": 10,
                        "stroke": "transparent",
                        "strokeWidth": 1,
                      }
                    }
                    transform="translate(200, 200)"
                  />
                  <path
                    d="M1.2246467991473532e-14,-200L0,0Z"
                    role="presentation"
                    shapeRendering="auto"
                    style={
                      Object {
                        "fill": undefined,
                        "padding": 10,
                        "stroke": "transparent",
                        "strokeWidth": 1,
                      }
                    }
                    transform="translate(200, 200)"
                  />
                  <text
                    direction="inherit"
                    dx={0}
                    dy={-2.0300000000000002}
                    x={200}
                    y={160}
                  >
                    <tspan
                      dx={0}
                      style={
                        Object {
                          "fill": "#252525",
                          "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Seravek', 'Trebuchet MS', sans-serif",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 20,
                          "stroke": "transparent",
                        }
                      }
                      textAnchor="middle"
                      x={200}
                    >
                      
                    </tspan>
                  </text>
                  <text
                    direction="inherit"
                    dx={0}
                    dy={-2.0300000000000002}
                    x={200}
                    y={160}
                  >
                    <tspan
                      dx={0}
                      style={
                        Object {
                          "fill": "#252525",
                          "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Seravek', 'Trebuchet MS', sans-serif",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 20,
                          "stroke": "transparent",
                        }
                      }
                      textAnchor="middle"
                      x={200}
                    >
                      
                    </tspan>
                  </text>
                  <text
                    direction="inherit"
                    dx={0}
                    dy={-2.0300000000000002}
                    x={200}
                    y={160}
                  >
                    <tspan
                      dx={0}
                      style={
                        Object {
                          "fill": "#252525",
                          "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Seravek', 'Trebuchet MS', sans-serif",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 20,
                          "stroke": "transparent",
                        }
                      }
                      textAnchor="middle"
                      x={200}
                    >
                      
                    </tspan>
                  </text>
                  <text
                    direction="inherit"
                    dx={0}
                    dy={-2.0300000000000002}
                    x={200}
                    y={160}
                  >
                    <tspan
                      dx={0}
                      style={
                        Object {
                          "fill": "#252525",
                          "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Seravek', 'Trebuchet MS', sans-serif",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 20,
                          "stroke": "transparent",
                        }
                      }
                      textAnchor="middle"
                      x={200}
                    >
                      
                    </tspan>
                  </text>
                </g>
              </svg>
              <div
                style={
                  Object {
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "top": 0,
                    "width": "100%",
                    "zIndex": 99,
                  }
                }
              >
                <svg
                  height={400}
                  style={
                    Object {
                      "height": "100%",
                      "overflow": "visible",
                      "width": "100%",
                    }
                  }
                  viewBox="0 0 400 400"
                  width={400}
                />
              </div>
            </div>
          </div>
          <div
            className="investment-allocation__expenses"
          >
            <div
              className="investment-allocation__row investment-allocation__row--empty"
            >
              <div
                className="investment-allocation__title investment-allocation__title--reputation-building"
              >
                Reputation Building
              </div>
              <div
                className="investment-allocation__value"
              >
                $0
              </div>
            </div>
            <div
              className="investment-allocation__row investment-allocation__row--empty"
            >
              <div
                className="investment-allocation__title investment-allocation__title--demand-creation"
              >
                Demand Creation
              </div>
              <div
                className="investment-allocation__value"
              >
                $0
              </div>
            </div>
            <div
              className="investment-allocation__row investment-allocation__row--empty"
            >
              <div
                className="investment-allocation__title investment-allocation__title--leasing-enablement"
              >
                Leasing Enablement
              </div>
              <div
                className="investment-allocation__value"
              >
                $0
              </div>
            </div>
            <div
              className="investment-allocation__row investment-allocation__row--empty"
            >
              <div
                className="investment-allocation__title investment-allocation__title--market-intelligence"
              >
                Market Intelligence
              </div>
              <div
                className="investment-allocation__value"
              >
                $0
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
